[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/Grass.png" type="Texture" id=1]
[ext_resource path="res://ARCADEPI.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://src/Main_Menu.gd" type="Script" id=3]
[ext_resource path="res://button_theme.tres" type="Theme" id=4]
[ext_resource path="res://musics/yet another soundtrack - Track 02 (Castle Von Krumpen).ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 1012, 560 )
scale = Vector2( 1.03516, 0.617188 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -406.0
margin_top = -240.0
margin_right = 406.0
margin_bottom = -177.0
custom_fonts/font = SubResource( 1 )
text = "The Lord of the Tea"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -10.0
margin_right = 152.0
margin_bottom = 10.0
theme = ExtResource( 4 )
text = "EASY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 84.0
margin_right = 152.0
margin_bottom = 150.0
theme = ExtResource( 4 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 180.0
margin_right = 152.0
margin_bottom = 246.0
theme = ExtResource( 4 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Easy_Button" to="." method="_on_Easy_Button_pressed"]
[connection signal="pressed" from="Medium_Button" to="." method="_on_Medium_Button_pressed"]
[connection signal="pressed" from="Hard_Button" to="." method="_on_Hard_Button_pressed"]
